Fix IntelliJ warnings on DynamicFinder
- operatorPatterns/operators fields are only ever assigned in the
  constructor - make them final.
- Diamond operator for the methodExpressions map initializer.
- Merge two identical-body SecurityException/NoSuchMethodException
  catch branches into multi-catch, in both the static initializer and
  registerNewMethodExpression.
- Suppress the intentionally-ignored Matcher.find() result in
  createFinderInvocation (isMethodMatch already guarantees the match
  succeeds before a finder's invoke() is ever called).
- buildMatchSpec: the local pattern "(prefix)([A-Z]\w*)" has no
  alternation, so group 2 is guaranteed non-null whenever find()
  succeeds - drop the always-true querySequence != null conjunct, and
  collapse the now childless outer if into the inner one.
- Drop two self-reassignments (x = getInitializedExpression(x, args))
  now that the helper is confirmed to always mutate-and-return the
  same reference; and delete a soloArgs array that was populated but
  never read.
- Extract the ~25-line fetch/cache argument-map handling duplicated
  verbatim between both populateArgumentsForCriteria overloads into a
  shared applyFetchAndCacheArguments helper, parameterized over the
  join/cache operations since Query and BuildableCriteria don't share
  a supertype exposing them. Convert the surviving sort-map branches
  to pattern variables, dropping an unused `value` local along the
  way.
- configureQueryWithArguments: fold the instanceof check and cast into
  a single pattern-variable condition.
- Drop the redundant Iterable cast on methodExpressions.keySet() and
  replace criteria.remove(0) with removeFirst().
- Leave targetClass's unused-parameter warning suppressed rather than
  removing the parameter (call-site compatibility with
  grails-data-hibernate5/7 and grails-data-mongodb) and leave the
  Class<? extends Object> wildcard alone (documented GROOVY-9460
  workaround already noted in the existing TODO).

Verified via th